syntax = "proto3";

option java_multiple_files = true;

import "com/sourceforgery/tachikoma/grpc/frontend/common.proto";

package com.sourceforgery.tachikoma.grpc.frontend.unsubscribe;

message UnsubscribeData {
    // The email that wants to unsubscribe
    EmailId emailId = 101;
}
